# quantum-inferno

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: changelog.md  examples.md  (+1 more)
quantum_inferno/: __init__.py  atoms.py  atoms_FOR_CWT.py  atoms_TO_REPLACE.py  cwt_atoms.py  info.py  pyproject.toml  scales_dyadic.py  styx_cwt.py  styx_fft.py  styx_stx.py  tfr_info.py  util_matrix.py  utils.py  utils_date_time.py  utils_picker.py
quantum_inferno/examples/: e00_logon_spectral_canvas.py  e01_tone_spectral_canvas.py  s00_grain_tfr_TEMPLATE.py
quantum_inferno/examples/doppler_set/: doppler_example_20hz_TO_FIX_TFR.py
quantum_inferno/examples/e00_intro_set/: s02_tone_stft_vs_spectrogram.py  s07_grain_tfr_TEMPLATE_TO_FIX.py
quantum_inferno/examples/e01_entropy_set/: s00_logon_spectral_canvas.py
quantum_inferno/examples/e03_tfbt_set/: tfbt_example_crosschirp.py
quantum_inferno/examples/entropy_set/: e00_logon_spectral_canvas.py  e01_tone_spectral_canvas.py
quantum_inferno/plot_templates/: plot_base.py  plot_cyberspectral.py  plot_entropy_1d.py  plot_templates.py  plot_templates_examples.py  plot_templates_streamlined.py  plot_time_frequency_reps_black.py  quick_plots.py
quantum_inferno/synth/: benchmark_signals.py  blast_pulse.py  blast_wk_pulse.py  blast_wx_pulse.py  doppler.py  synthetics.py  synthetics_NEW.py  synthetics_TO_FIX.py
quantum_inferno/utilities/: calculations.py  date_time.py  errors.py  frequency_scales.py  matrix.py  picker.py  rescaling.py  sampling.py  short_time_fft.py  window.py
quantum_inferno/utils/: picker.py  rescaling.py
(+117 files in other folders)
